--- a/providers/composer.yaml
+++ b/providers/composer.yaml
@@ -13,27 +13,27 @@ provider:
 actions:
   install:
     description: "Install packages via Composer"
-    template: "composer global require {{sai_package('*', 'name', 'composer')}}"
+    template: "composer global require {{sai_package('*', 'package_name', 'composer')}}"
     timeout: 300
-    detection: "composer show {{sai_package(0, 'name', 'composer')}} >/dev/null 2>&1"
+    detection: "composer show {{sai_package(0, 'package_name', 'composer')}} >/dev/null 2>&1"
     validation:
-      command: "composer global show | grep {{sai_package(0, 'name', 'composer')}}"
+      command: "composer global show | grep {{sai_package(0, 'package_name', 'composer')}}"
       expected_exit_code: 0
-    rollback: "composer global remove {{sai_package('*', 'name', 'composer')}}"
+    rollback: "composer global remove {{sai_package('*', 'package_name', 'composer')}}"
 
   uninstall:
     description: "Remove packages via Composer"
-    template: "composer global remove {{sai_package('*', 'name', 'composer')}}"
-    detection: "composer show {{sai_package(0, 'name', 'composer')}} >/dev/null 2>&1"
+    template: "composer global remove {{sai_package('*', 'package_name', 'composer')}}"
+    detection: "composer show {{sai_package(0, 'package_name', 'composer')}} >/dev/null 2>&1"
     validation:
-      command: "! composer global show | grep {{sai_package(0, 'name', 'composer')}}"
+      command: "! composer global show | grep {{sai_package(0, 'package_name', 'composer')}}"
       expected_exit_code: 0
 
   upgrade:
     description: "Upgrade packages via Composer"
-    template: "composer global update {{sai_package('*', 'name', 'composer')}}"
+    template: "composer global update {{sai_package('*', 'package_name', 'composer')}}"
     timeout: 300
-    detection: "composer show {{sai_package(0, 'name', 'composer')}} >/dev/null 2>&1"
+    detection: "composer show {{sai_package(0, 'package_name', 'composer')}} >/dev/null 2>&1"
 
   start:
     description: "Start PHP application"
@@ -41,33 +41,33 @@ actions:
 
   stop:
     description: "Stop PHP application"
-    template: "pkill -f {{sai_package(0, 'name', 'composer')}}"
+    template: "pkill -f {{sai_package(0, 'package_name', 'composer')}}"
 
   restart:
     description: "Restart PHP application"
     steps:
       - name: "stop-app"
-        command: "pkill -f {{sai_package(0, 'name', 'composer')}}"
+        command: "pkill -f {{sai_package(0, 'package_name', 'composer')}}"
         ignore_failure: true
       - name: "start-app"
         command: "php {{sai_command(0, 'path', 'composer')}}"
 
   status:
     description: "Check application status"
-    template: "pgrep -f {{sai_package(0, 'name', 'composer')}}"
+    template: "pgrep -f {{sai_package(0, 'package_name', 'composer')}}"
 
   info:
     description: "Show package information"
-    template: "composer global info {{sai_package(0, 'name', 'composer')}}"
+    template: "composer global info {{sai_package(0, 'package_name', 'composer')}}"
 
   search:
     description: "Search for packages"
-    template: "composer search {{sai_package(0, 'name', 'composer')}}"
+    template: "composer search {{sai_package(0, 'package_name', 'composer')}}"
 
   list:
     description: "List installed packages"
-    template: "composer global show | grep {{sai_package(0, 'name', 'composer')}}"
+    template: "composer global show | grep {{sai_package(0, 'package_name', 'composer')}}"
 
   version:
     description: "Show package version"
-    template: "composer global show {{sai_package(0, 'name', 'composer')}} | grep 'versions'"
+    template: "composer global show {{sai_package(0, 'package_name', 'composer')}} | grep 'versions'"
