--- a/providers/gem.yaml
+++ b/providers/gem.yaml
@@ -14,27 +14,27 @@ provider:
 actions:
   install:
     description: "Install packages via Gem"
-    template: "gem install {{sai_package('*', 'name', 'gem')}}"
+    template: "gem install {{sai_package('*', 'package_name', 'gem')}}"
     timeout: 300
-    detection: "gem search '^{{sai_package(0, 'name', 'gem')}}' | grep -q '^{{sai_package(0, 'name', 'gem')}}'"
+    detection: "gem search '^{{sai_package(0, 'package_name', 'gem')}}' | grep -q '^{{sai_package(0, 'package_name', 'gem')}}'"
     validation:
-      command: "gem list | grep {{sai_package(0, 'name', 'gem')}}"
+      command: "gem list | grep {{sai_package(0, 'package_name', 'gem')}}"
       expected_exit_code: 0
-    rollback: "gem uninstall {{sai_package('*', 'name', 'gem')}}"
+    rollback: "gem uninstall {{sai_package('*', 'package_name', 'gem')}}"
 
   uninstall:
     description: "Remove packages via Gem"
-    template: "gem uninstall {{sai_package('*', 'name', 'gem')}}"
-    detection: "gem list | grep -q '^{{sai_package(0, 'name', 'gem')}}'"
+    template: "gem uninstall {{sai_package('*', 'package_name', 'gem')}}"
+    detection: "gem list | grep -q '^{{sai_package(0, 'package_name', 'gem')}}'"
     validation:
-      command: "! gem list | grep {{sai_package(0, 'name', 'gem')}}"
+      command: "! gem list | grep {{sai_package(0, 'package_name', 'gem')}}"
       expected_exit_code: 0
 
   upgrade:
     description: "Upgrade packages via Gem"
-    template: "gem update {{sai_package('*', 'name', 'gem')}}"
+    template: "gem update {{sai_package('*', 'package_name', 'gem')}}"
     timeout: 300
-    detection: "gem list | grep -q '^{{sai_package(0, 'name', 'gem')}}'"
+    detection: "gem list | grep -q '^{{sai_package(0, 'package_name', 'gem')}}'"
 
   start:
     description: "Start Ruby application"
@@ -42,33 +42,33 @@ actions:
 
   stop:
     description: "Stop Ruby application"
-    template: "pkill -f {{sai_package(0, 'name', 'gem')}}"
+    template: "pkill -f {{sai_package(0, 'package_name', 'gem')}}"
 
   restart:
     description: "Restart Ruby application"
     steps:
       - name: "stop-app"
-        command: "pkill -f {{sai_package(0, 'name', 'gem')}}"
+        command: "pkill -f {{sai_package(0, 'package_name', 'gem')}}"
         ignore_failure: true
       - name: "start-app"
         command: "{{sai_command(0, 'path', 'gem')}}"
 
   status:
     description: "Check application status"
-    template: "pgrep -f {{sai_package(0, 'name', 'gem')}}"
+    template: "pgrep -f {{sai_package(0, 'package_name', 'gem')}}"
 
   info:
     description: "Show package information"
-    template: "gem info {{sai_package(0, 'name', 'gem')}}"
+    template: "gem info {{sai_package(0, 'package_name', 'gem')}}"
 
   search:
     description: "Search for packages"
-    template: "gem search {{sai_package(0, 'name', 'gem')}}"
+    template: "gem search {{sai_package(0, 'package_name', 'gem')}}"
 
   list:
     description: "List installed packages"
-    template: "gem list | grep {{sai_package(0, 'name', 'gem')}}"
+    template: "gem list | grep {{sai_package(0, 'package_name', 'gem')}}"
 
   version:
     description: "Show package version"
-    template: "gem list {{sai_package(0, 'name', 'gem')}} | grep '^{{sai_package(0, 'name', 'gem')}}'"
+    template: "gem list {{sai_package(0, 'package_name', 'gem')}} | grep '^{{sai_package(0, 'package_name', 'gem')}}'"
