--- a/providers/brew.yaml
+++ b/providers/brew.yaml
@@ -23,27 +23,27 @@ actions:
 
   install:
     description: "Install packages via Homebrew"
-    template: "brew install {{sai_package('*', 'name', 'brew')}}"
+    template: "brew install {{sai_package('*', 'package_name', 'brew')}}"
     timeout: 600
-    detection: "brew search {{sai_package(0, 'name', 'brew')}} | grep -q '^{{sai_package(0, 'name', 'brew')}}'"
+    detection: "brew search {{sai_package(0, 'package_name', 'brew')}} | grep -q '^{{sai_package(0, 'package_name', 'brew')}}'"
     validation:
-      command: "brew list | grep {{sai_package(0, 'name', 'brew')}}"
+      command: "brew list | grep {{sai_package(0, 'package_name', 'brew')}}"
       expected_exit_code: 0
-    rollback: "brew uninstall {{sai_package('*', 'name', 'brew')}}"
+    rollback: "brew uninstall {{sai_package('*', 'package_name', 'brew')}}"
 
   uninstall:
     description: "Remove packages via Homebrew"
-    template: "brew uninstall {{sai_package('*', 'name', 'brew')}}"
-    detection: "brew list | grep -q '^{{sai_package(0, 'name', 'brew')}}'"
+    template: "brew uninstall {{sai_package('*', 'package_name', 'brew')}}"
+    detection: "brew list | grep -q '^{{sai_package(0, 'package_name', 'brew')}}'"
     validation:
-      command: "! brew list | grep {{sai_package(0, 'name', 'brew')}}"
+      command: "! brew list | grep {{sai_package(0, 'package_name', 'brew')}}"
       expected_exit_code: 0
 
   upgrade:
     description: "Upgrade packages via Homebrew"
-    template: "brew upgrade {{sai_package('*', 'name', 'brew')}}"
+    template: "brew upgrade {{sai_package('*', 'package_name', 'brew')}}"
     timeout: 600
-    detection: "brew list | grep -q '^{{sai_package(0, 'name', 'brew')}}'"
+    detection: "brew list | grep -q '^{{sai_package(0, 'package_name', 'brew')}}'"
 
   start:
     description: "Start service via brew services"
@@ -81,16 +81,16 @@ actions:
 
   info:
     description: "Show package information"
-    template: "brew info {{sai_package(0, 'name', 'brew')}}"
+    template: "brew info {{sai_package(0, 'package_name', 'brew')}}"
 
   search:
     description: "Search for packages"
-    template: "brew search {{sai_package(0, 'name', 'brew')}}"
+    template: "brew search {{sai_package(0, 'package_name', 'brew')}}"
 
   list:
     description: "List installed packages"
-    template: "brew list | grep {{sai_package(0, 'name', 'brew')}}"
+    template: "brew list | grep {{sai_package(0, 'package_name', 'brew')}}"
 
   version:
     description: "Show package version"
-    template: "brew list --versions {{sai_package(0, 'name', 'brew')}}"
+    template: "brew list --versions {{sai_package(0, 'package_name', 'brew')}}"
