--- a/providers/cargo.yaml
+++ b/providers/cargo.yaml
@@ -13,27 +13,27 @@ provider:
 actions:
   install:
     description: "Install packages via Cargo"
-    template: "cargo install {{sai_package('*', 'name', 'cargo')}}"
+    template: "cargo install {{sai_package('*', 'package_name', 'cargo')}}"
     timeout: 600
-    detection: "cargo search {{sai_package(0, 'name', 'cargo')}} >/dev/null 2>&1"
+    detection: "cargo search {{sai_package(0, 'package_name', 'cargo')}} >/dev/null 2>&1"
     validation:
-      command: "cargo install --list | grep {{sai_package(0, 'name', 'cargo')}}"
+      command: "cargo install --list | grep {{sai_package(0, 'package_name', 'cargo')}}"
       expected_exit_code: 0
-    rollback: "cargo uninstall {{sai_package('*', 'name', 'cargo')}}"
+    rollback: "cargo uninstall {{sai_package('*', 'package_name', 'cargo')}}"
 
   uninstall:
     description: "Remove packages via Cargo"
-    template: "cargo uninstall {{sai_package('*', 'name', 'cargo')}}"
-    detection: "cargo search {{sai_package(0, 'name', 'cargo')}} >/dev/null 2>&1"
+    template: "cargo uninstall {{sai_package('*', 'package_name', 'cargo')}}"
+    detection: "cargo search {{sai_package(0, 'package_name', 'cargo')}} >/dev/null 2>&1"
     validation:
-      command: "! cargo install --list | grep {{sai_package(0, 'name', 'cargo')}}"
+      command: "! cargo install --list | grep {{sai_package(0, 'package_name', 'cargo')}}"
       expected_exit_code: 0
 
   upgrade:
     description: "Upgrade packages via Cargo"
-    template: "cargo install --force {{sai_package('*', 'name', 'cargo')}}"
+    template: "cargo install --force {{sai_package('*', 'package_name', 'cargo')}}"
     timeout: 600
-    detection: "cargo search {{sai_package(0, 'name', 'cargo')}} >/dev/null 2>&1"
+    detection: "cargo search {{sai_package(0, 'package_name', 'cargo')}} >/dev/null 2>&1"
 
   start:
     description: "Start Rust application"
@@ -41,33 +41,33 @@ actions:
 
   stop:
     description: "Stop Rust application"
-    template: "pkill -f {{sai_package(0, 'name', 'cargo')}}"
+    template: "pkill -f {{sai_package(0, 'package_name', 'cargo')}}"
 
   restart:
     description: "Restart Rust application"
     steps:
       - name: "stop-app"
-        command: "pkill -f {{sai_package(0, 'name', 'cargo')}}"
+        command: "pkill -f {{sai_package(0, 'package_name', 'cargo')}}"
         ignore_failure: true
       - name: "start-app"
         command: "{{sai_command(0, 'path', 'cargo')}}"
 
   status:
     description: "Check application status"
-    template: "pgrep -f {{sai_package(0, 'name', 'cargo')}}"
+    template: "pgrep -f {{sai_package(0, 'package_name', 'cargo')}}"
 
   info:
     description: "Show package information"
-    template: "cargo search {{sai_package(0, 'name', 'cargo')}} --limit 1"
+    template: "cargo search {{sai_package(0, 'package_name', 'cargo')}} --limit 1"
 
   search:
     description: "Search for packages"
-    template: "cargo search {{sai_package(0, 'name', 'cargo')}}"
+    template: "cargo search {{sai_package(0, 'package_name', 'cargo')}}"
 
   list:
     description: "List installed packages"
-    template: "cargo install --list | grep {{sai_package(0, 'name', 'cargo')}}"
+    template: "cargo install --list | grep {{sai_package(0, 'package_name', 'cargo')}}"
 
   version:
     description: "Show package version"
-    template: "cargo install --list | grep '^{{sai_package(0, 'name', 'cargo')}} '"
+    template: "cargo install --list | grep '^{{sai_package(0, 'package_name', 'cargo')}} '"
