--- a/providers/helm.yaml
+++ b/providers/helm.yaml
@@ -20,27 +20,27 @@ actions:
       - name: "update-repo"
         command: "helm repo update"
       - name: "install-chart"
-        command: "helm install {{release_name}} {{chart_repo}}/{{sai_package(0, 'name', 'helm')}} --namespace {{namespace}} --create-namespace"
+        command: "helm install {{release_name}} {{chart_repo}}/{{sai_package(0, 'package_name', 'helm')}} --namespace {{namespace}} --create-namespace"
     timeout: 600
     validation:
       command: "helm list -n {{namespace}} | grep {{release_name}}"
       expected_exit_code: 0
     rollback: "helm uninstall {{release_name}} -n {{namespace}}"
     variables:
-      release_name: "{{sai_package(0, 'name', 'helm')}}-release"
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
-      chart_repo: "{{sai_package(0, 'name', 'helm')}}-repo"
+      release_name: "{{sai_package(0, 'package_name', 'helm')}}-release"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
+      chart_repo: "{{sai_package(0, 'package_name', 'helm')}}-repo"
 
   uninstall:
     description: "Remove Helm chart"
     template: "helm uninstall {{release_name}} -n {{namespace}}"
-    detection: "helm search repo {{sai_package(0, 'name', 'helm')}} >/dev/null 2>&1"
+    detection: "helm search repo {{sai_package(0, 'package_name', 'helm')}} >/dev/null 2>&1"
     validation:
       command: "! helm list -n {{namespace}} | grep {{release_name}}"
       expected_exit_code: 0
     variables:
-      release_name: "{{sai_package(0, 'name', 'helm')}}-release"
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      release_name: "{{sai_package(0, 'package_name', 'helm')}}-release"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
 
   upgrade:
     description: "Upgrade Helm chart"
@@ -48,64 +48,64 @@ actions:
       - name: "update-repo"
         command: "helm repo update"
       - name: "upgrade-chart"
-        command: "helm upgrade {{release_name}} {{chart_repo}}/{{sai_package(0, 'name', 'helm')}} -n {{namespace}}"
+        command: "helm upgrade {{release_name}} {{chart_repo}}/{{sai_package(0, 'package_name', 'helm')}} -n {{namespace}}"
     timeout: 600
-    detection: "helm search repo {{sai_package(0, 'name', 'helm')}} >/dev/null 2>&1"
+    detection: "helm search repo {{sai_package(0, 'package_name', 'helm')}} >/dev/null 2>&1"
     variables:
-      release_name: "{{sai_package(0, 'name', 'helm')}}-release"
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
-      chart_repo: "{{sai_package(0, 'name', 'helm')}}-repo"
+      release_name: "{{sai_package(0, 'package_name', 'helm')}}-release"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
+      chart_repo: "{{sai_package(0, 'package_name', 'helm')}}-repo"
 
   start:
     description: "Scale up Kubernetes deployment"
-    template: "kubectl scale deployment {{sai_package(0, 'name', 'helm')}} --replicas=1 -n {{namespace}}"
+    template: "kubectl scale deployment {{sai_package(0, 'package_name', 'helm')}} --replicas=1 -n {{namespace}}"
     variables:
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
 
   stop:
     description: "Scale down Kubernetes deployment"
-    template: "kubectl scale deployment {{sai_package(0, 'name', 'helm')}} --replicas=0 -n {{namespace}}"
+    template: "kubectl scale deployment {{sai_package(0, 'package_name', 'helm')}} --replicas=0 -n {{namespace}}"
     variables:
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
 
   restart:
     description: "Restart Kubernetes deployment"
-    template: "kubectl rollout restart deployment/{{sai_package(0, 'name', 'helm')}} -n {{namespace}}"
+    template: "kubectl rollout restart deployment/{{sai_package(0, 'package_name', 'helm')}} -n {{namespace}}"
     variables:
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
 
   status:
     description: "Check Helm release status"
     template: "helm status {{release_name}} -n {{namespace}}"
     variables:
-      release_name: "{{sai_package(0, 'name', 'helm')}}-release"
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      release_name: "{{sai_package(0, 'package_name', 'helm')}}-release"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
 
   logs:
     description: "Show Kubernetes pod logs"
-    template: "kubectl logs -l app={{sai_package(0, 'name', 'helm')}} -n {{namespace}} --tail=50"
+    template: "kubectl logs -l app={{sai_package(0, 'package_name', 'helm')}} -n {{namespace}} --tail=50"
     variables:
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
 
   info:
     description: "Show Helm chart information"
-    template: "helm show chart {{chart_repo}}/{{sai_package(0, 'name', 'helm')}}"
+    template: "helm show chart {{chart_repo}}/{{sai_package(0, 'package_name', 'helm')}}"
     variables:
-      chart_repo: "{{sai_package(0, 'name', 'helm')}}-repo"
+      chart_repo: "{{sai_package(0, 'package_name', 'helm')}}-repo"
 
   search:
     description: "Search for Helm charts"
-    template: "helm search repo {{sai_package(0, 'name', 'helm')}}"
+    template: "helm search repo {{sai_package(0, 'package_name', 'helm')}}"
 
   list:
     description: "List Helm releases"
-    template: "helm list -n {{namespace}} | grep {{sai_package(0, 'name', 'helm')}}"
+    template: "helm list -n {{namespace}} | grep {{sai_package(0, 'package_name', 'helm')}}"
     variables:
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
 
   version:
     description: "Show Helm release version"
     template: "helm list -n {{namespace}} -o json | jq '.[] | select(.name==\"{{release_name}}\") | .app_version'"
     variables:
-      release_name: "{{sai_package(0, 'name', 'helm')}}-release"
-      namespace: "{{sai_package(0, 'name', 'helm')}}"
+      release_name: "{{sai_package(0, 'package_name', 'helm')}}-release"
+      namespace: "{{sai_package(0, 'package_name', 'helm')}}"
