--- a/providers/nix.yaml
+++ b/providers/nix.yaml
@@ -13,27 +13,27 @@ provider:
 actions:
   install:
     description: "Install packages via Nix"
-    template: "nix-env -iA nixpkgs.{{sai_package(0, 'name', 'nix')}}"
+    template: "nix-env -iA nixpkgs.{{sai_package(0, 'package_name', 'nix')}}"
     timeout: 600
-    detection: "nix-env -q | grep {{sai_package(0, 'name', 'nix')}} >/dev/null 2>&1"
+    detection: "nix-env -q | grep {{sai_package(0, 'package_name', 'nix')}} >/dev/null 2>&1"
     validation:
-      command: "nix-env -q | grep {{sai_package(0, 'name', 'nix')}}"
+      command: "nix-env -q | grep {{sai_package(0, 'package_name', 'nix')}}"
       expected_exit_code: 0
-    rollback: "nix-env -e {{sai_package('*', 'name', 'nix')}}"
+    rollback: "nix-env -e {{sai_package('*', 'package_name', 'nix')}}"
 
   uninstall:
     description: "Remove packages via Nix"
-    template: "nix-env -e {{sai_package('*', 'name', 'nix')}}"
-    detection: "nix-env -q | grep {{sai_package(0, 'name', 'nix')}} >/dev/null 2>&1"
+    template: "nix-env -e {{sai_package('*', 'package_name', 'nix')}}"
+    detection: "nix-env -q | grep {{sai_package(0, 'package_name', 'nix')}} >/dev/null 2>&1"
     validation:
-      command: "! nix-env -q | grep {{sai_package(0, 'name', 'nix')}}"
+      command: "! nix-env -q | grep {{sai_package(0, 'package_name', 'nix')}}"
       expected_exit_code: 0
 
   upgrade:
     description: "Upgrade packages via Nix"
-    template: "nix-env -u {{sai_package('*', 'name', 'nix')}}"
+    template: "nix-env -u {{sai_package('*', 'package_name', 'nix')}}"
     timeout: 600
-    detection: "nix-env -q | grep {{sai_package(0, 'name', 'nix')}} >/dev/null 2>&1"
+    detection: "nix-env -q | grep {{sai_package(0, 'package_name', 'nix')}} >/dev/null 2>&1"
 
   start:
     description: "Start service via systemctl"
@@ -71,12 +71,12 @@ actions:
 
   info:
     description: "Show package information"
-    template: "nix-env -qa --description {{sai_package(0, 'name', 'nix')}}"
+    template: "nix-env -qa --description {{sai_package(0, 'package_name', 'nix')}}"
 
   search:
     description: "Search for packages"
-    template: "nix-env -qa | grep {{sai_package(0, 'name', 'nix')}}"
+    template: "nix-env -qa | grep {{sai_package(0, 'package_name', 'nix')}}"
 
   list:
     description: "List installed packages"
-    template: "nix-env -q | grep {{sai_package(0, 'name', 'nix')}}"
+    template: "nix-env -q | grep {{sai_package(0, 'package_name', 'nix')}}"
