--- a/providers/opkg.yaml
+++ b/providers/opkg.yaml
@@ -17,20 +17,20 @@ actions:
       - name: "update-package-list"
         command: "opkg update"
       - name: "install-packages"
-        command: "opkg install {{sai_package('*', 'name', 'opkg')}}"
+        command: "opkg install {{sai_package('*', 'package_name', 'opkg')}}"
     timeout: 300
-    detection: "opkg list-installed | grep {{sai_package(0, 'name', 'opkg')}} >/dev/null 2>&1"
+    detection: "opkg list-installed | grep {{sai_package(0, 'package_name', 'opkg')}} >/dev/null 2>&1"
     validation:
-      command: "opkg list-installed | grep {{sai_package(0, 'name', 'opkg')}}"
+      command: "opkg list-installed | grep {{sai_package(0, 'package_name', 'opkg')}}"
       expected_exit_code: 0
-    rollback: "opkg remove {{sai_package('*', 'name', 'opkg')}}"
+    rollback: "opkg remove {{sai_package('*', 'package_name', 'opkg')}}"
 
   uninstall:
     description: "Remove packages via OPKG"
-    template: "opkg remove {{sai_package('*', 'name', 'opkg')}}"
-    detection: "opkg list-installed | grep {{sai_package(0, 'name', 'opkg')}} >/dev/null 2>&1"
+    template: "opkg remove {{sai_package('*', 'package_name', 'opkg')}}"
+    detection: "opkg list-installed | grep {{sai_package(0, 'package_name', 'opkg')}} >/dev/null 2>&1"
     validation:
-      command: "! opkg list-installed | grep {{sai_package(0, 'name', 'opkg')}}"
+      command: "! opkg list-installed | grep {{sai_package(0, 'package_name', 'opkg')}}"
       expected_exit_code: 0
 
   upgrade:
@@ -39,9 +39,9 @@ actions:
       - name: "update-package-list"
         command: "opkg update"
       - name: "upgrade-packages"
-        command: "opkg upgrade {{sai_package('*', 'name', 'opkg')}}"
+        command: "opkg upgrade {{sai_package('*', 'package_name', 'opkg')}}"
     timeout: 300
-    detection: "opkg list-installed | grep {{sai_package(0, 'name', 'opkg')}} >/dev/null 2>&1"
+    detection: "opkg list-installed | grep {{sai_package(0, 'package_name', 'opkg')}} >/dev/null 2>&1"
 
   start:
     description: "Start service via init script"
@@ -76,16 +76,16 @@ actions:
 
   info:
     description: "Show package information"
-    template: "opkg info {{sai_package(0, 'name', 'opkg')}}"
+    template: "opkg info {{sai_package(0, 'package_name', 'opkg')}}"
 
   search:
     description: "Search for packages"
-    template: "opkg find {{sai_package(0, 'name', 'opkg')}}"
+    template: "opkg find {{sai_package(0, 'package_name', 'opkg')}}"
 
   list:
     description: "List installed packages"
-    template: "opkg list-installed | grep {{sai_package(0, 'name', 'opkg')}}"
+    template: "opkg list-installed | grep {{sai_package(0, 'package_name', 'opkg')}}"
 
   version:
     description: "Show package version"
-    template: "opkg list-installed {{sai_package(0, 'name', 'opkg')}} | awk '{print $1\" \"$3}'"
+    template: "opkg list-installed {{sai_package(0, 'package_name', 'opkg')}} | awk '{print $1\" \"$3}'"
