--- a/providers/xbps.yaml
+++ b/providers/xbps.yaml
@@ -17,20 +17,20 @@ actions:
       - name: "sync-repos"
         command: "xbps-install -S"
       - name: "install-packages"
-        command: "xbps-install -y {{sai_package('*', 'name', 'xbps')}}"
+        command: "xbps-install -y {{sai_package('*', 'package_name', 'xbps')}}"
     timeout: 600
-    detection: "xbps-query -l | grep {{sai_package(0, 'name', 'xbps')}} >/dev/null 2>&1"
+    detection: "xbps-query -l | grep {{sai_package(0, 'package_name', 'xbps')}} >/dev/null 2>&1"
     validation:
-      command: "xbps-query -l | grep {{sai_package(0, 'name', 'xbps')}}"
+      command: "xbps-query -l | grep {{sai_package(0, 'package_name', 'xbps')}}"
       expected_exit_code: 0
-    rollback: "xbps-remove -y {{sai_package('*', 'name', 'xbps')}}"
+    rollback: "xbps-remove -y {{sai_package('*', 'package_name', 'xbps')}}"
 
   uninstall:
     description: "Remove packages via XBPS"
-    template: "xbps-remove -y {{sai_package('*', 'name', 'xbps')}}"
-    detection: "xbps-query -l | grep {{sai_package(0, 'name', 'xbps')}} >/dev/null 2>&1"
+    template: "xbps-remove -y {{sai_package('*', 'package_name', 'xbps')}}"
+    detection: "xbps-query -l | grep {{sai_package(0, 'package_name', 'xbps')}} >/dev/null 2>&1"
     validation:
-      command: "! xbps-query -l | grep {{sai_package(0, 'name', 'xbps')}}"
+      command: "! xbps-query -l | grep {{sai_package(0, 'package_name', 'xbps')}}"
       expected_exit_code: 0
 
   upgrade:
@@ -39,9 +39,9 @@ actions:
       - name: "sync-repos"
         command: "xbps-install -S"
       - name: "upgrade-packages"
-        command: "xbps-install -u {{sai_package('*', 'name', 'xbps')}}"
+        command: "xbps-install -u {{sai_package('*', 'package_name', 'xbps')}}"
     timeout: 600
-    detection: "xbps-query -l | grep {{sai_package(0, 'name', 'xbps')}} >/dev/null 2>&1"
+    detection: "xbps-query -l | grep {{sai_package(0, 'package_name', 'xbps')}} >/dev/null 2>&1"
 
   start:
     description: "Start service via sv"
@@ -79,16 +79,16 @@ actions:
 
   info:
     description: "Show package information"
-    template: "xbps-query -R {{sai_package(0, 'name', 'xbps')}}"
+    template: "xbps-query -R {{sai_package(0, 'package_name', 'xbps')}}"
 
   search:
     description: "Search for packages"
-    template: "xbps-query -Rs {{sai_package(0, 'name', 'xbps')}}"
+    template: "xbps-query -Rs {{sai_package(0, 'package_name', 'xbps')}}"
 
   list:
     description: "List installed packages"
-    template: "xbps-query -l | grep {{sai_package(0, 'name', 'xbps')}}"
+    template: "xbps-query -l | grep {{sai_package(0, 'package_name', 'xbps')}}"
 
   version:
     description: "Show package version"
-    template: "xbps-query {{sai_package(0, 'name', 'xbps')}} | grep pkgver"
+    template: "xbps-query {{sai_package(0, 'package_name', 'xbps')}} | grep pkgver"
