--- a/providers/zypper.yaml
+++ b/providers/zypper.yaml
@@ -13,27 +13,27 @@ provider:
 actions:
   install:
     description: "Install packages via Zypper"
-    template: "zypper install -y {{sai_package('*', 'name', 'zypper')}}"
+    template: "zypper install -y {{sai_package('*', 'package_name', 'zypper')}}"
     timeout: 600
-    detection: "zypper info {{sai_package(0, 'name', 'zypper')}} >/dev/null 2>&1"
+    detection: "zypper info {{sai_package(0, 'package_name', 'zypper')}} >/dev/null 2>&1"
     validation:
-      command: "rpm -qa | grep {{sai_package(0, 'name', 'zypper')}}"
+      command: "rpm -qa | grep {{sai_package(0, 'package_name', 'zypper')}}"
       expected_exit_code: 0
-    rollback: "zypper remove -y {{sai_package('*', 'name', 'zypper')}}"
+    rollback: "zypper remove -y {{sai_package('*', 'package_name', 'zypper')}}"
 
   uninstall:
     description: "Remove packages via Zypper"
-    template: "zypper remove -y {{sai_package('*', 'name', 'zypper')}}"
-    detection: "rpm -qa | grep -q {{sai_package(0, 'name', 'zypper')}}"
+    template: "zypper remove -y {{sai_package('*', 'package_name', 'zypper')}}"
+    detection: "rpm -qa | grep -q {{sai_package(0, 'package_name', 'zypper')}}"
     validation:
-      command: "! rpm -qa | grep {{sai_package(0, 'name', 'zypper')}}"
+      command: "! rpm -qa | grep {{sai_package(0, 'package_name', 'zypper')}}"
       expected_exit_code: 0
 
   upgrade:
     description: "Upgrade packages via Zypper"
-    template: "zypper update -y {{sai_package('*', 'name', 'zypper')}}"
+    template: "zypper update -y {{sai_package('*', 'package_name', 'zypper')}}"
     timeout: 600
-    detection: "zypper info {{sai_package(0, 'name', 'zypper')}} >/dev/null 2>&1"
+    detection: "zypper info {{sai_package(0, 'package_name', 'zypper')}} >/dev/null 2>&1"
 
   start:
     description: "Start service via systemctl"
@@ -71,16 +71,16 @@ actions:
 
   info:
     description: "Show package information"
-    template: "zypper info {{sai_package(0, 'name', 'zypper')}}"
+    template: "zypper info {{sai_package(0, 'package_name', 'zypper')}}"
 
   search:
     description: "Search for packages"
-    template: "zypper search {{sai_package(0, 'name', 'zypper')}}"
+    template: "zypper search {{sai_package(0, 'package_name', 'zypper')}}"
 
   list:
     description: "List installed packages"
-    template: "rpm -qa | grep {{sai_package(0, 'name', 'zypper')}}"
+    template: "rpm -qa | grep {{sai_package(0, 'package_name', 'zypper')}}"
 
   version:
     description: "Show package version"
-    template: "rpm -q {{sai_package(0, 'name', 'zypper')}} --queryformat '%{NAME} %{VERSION}-%{RELEASE}'"
+    template: "rpm -q {{sai_package(0, 'package_name', 'zypper')}} --queryformat '%{NAME} %{VERSION}-%{RELEASE}'"
